Javascript ID3 Reader library add

--- a/WebContent/ThinkMine/wp-content/themes/OneCommunity/contents/ContentsFrame.html
+++ b/WebContent/ThinkMine/wp-content/themes/OneCommunity/contents/ContentsFrame.html
@@ -71,25 +71,13 @@
 	#text {
 		width:500px;
 		overflow:hidden;
-		background-color:#FFF;
+		background-color:#D6E6F5;
 		color:#222;
 		font-family:Courier, monospace;
 		font-weight:normal;
-		font-size:24px;
+		font-size:12px;
 		resize:none;
-		line-height:40px;
-		padding-left:100px;
-		padding-right:100px;
-		padding-top:45px;
-		padding-bottom:34px;
-		background-image:url(lines.png), url(paper.png);
-		background-repeat:repeat-y, repeat;
-		-webkit-border-radius:12px;
-		border-radius:12px;
-		-webkit-box-shadow: 0px 2px 14px #000;
-		box-shadow: 0px 2px 14px #000;
-		border-top:1px solid #FFF;
-		border-bottom:1px solid #FFF;
+		outline:none;		
 	}
 	.empty_text {		
 		outline:none;
@@ -182,7 +170,7 @@
 		<section class="block" height='1000' style="clear:left">		
 			<div id="TextContentsManager">
 				<div id="margin">Title: <input id="TextTitle" type="text" class="empty_text"></div>
-				<textarea placeholder="Enter something funny." id="text" name="text" rows="4" style="overflow: hidden; word-wrap: break-word; resize: none; height: 160px; "></textarea>  
+				<textarea placeholder="Any Text" id="text" name="text" rows="4" style="overflow: hidden; word-wrap: break-word; resize: none; height: 160px; "></textarea>  
 			</div>
 			<div id="ImageContentsManager">				
 				<div class="fixedDiv" style="position:absolute;">										
