Missed Javascript-ID3-Reader added again

--- a/WebContent/ThinkMine/wp-content/themes/OneCommunity/contents/ContentsFrame.html
+++ b/WebContent/ThinkMine/wp-content/themes/OneCommunity/contents/ContentsFrame.html
@@ -22,6 +22,7 @@
 		addJavascript("GridGen.js");
 		addJavascript("AdaptiveVideoPlayer/js/AdaptiveVideoPlayer.js");
 		addJavascript("/thirdparty/JavaScript-ID3-Reader/dist/id3-minimized.js");
+		addJavascript("/thirdparty/html2canvas-0.4.1/build/html2canvas.js");
 		
 		var imgFileList;
 		var imgCurrentPage = 0;
